gcc/testsuite/rust/rustc/ui/rfc-1937-termination-trait/termination-trait-main-i32.rs
fn main() -> i32 {
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-note ".E0277." "" { target *-*-* } .-2 }
// { help ".E0277." "" { target *-*-* } .-3 }
    0
}

